k8s/app/namespace.yaml
---
# App Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
